--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -26,3 +26,4 @@
 @import './db-theme/pages/page--product';
 @import './db-theme/pages/page--media';
 @import './db-theme/pages/page--blog-single';
+@import './db-theme/pages/page--hairy-dispatch';
