--- a/styles/db-theme/pages/_page--media.scss
+++ b/styles/db-theme/pages/_page--media.scss
@@ -1,165 +1,130 @@
 .db-page--media {
-  .db-section--blog-listing {
-    padding: 150px 30px 100px;
+  margin: 150px auto 100px;
 
+  .db-section--media-article {
+    padding: 100px 30px;
+    
     .db-container {
-      .db-grid-list {
-        display: grid;
-        grid-template-columns: repeat(4, minmax(250px, 1fr));
-        justify-content: center;
-        align-items: stretch;
-        grid-gap: 27px;
-        gap: 27px;
+      .article-list {
+        .article-item {
+          margin: 0 auto 130px;
 
-        @media only screen and (max-width: 1440px) {
-          grid-template-columns: repeat(3, minmax(250px, 1fr));
-        }
+          .db-row {
+            &:nth-of-type(1) {
+              justify-content: space-between;
+              align-items: center;
+              gap: 30px;
+              margin: 0 auto 44px;
 
-        @media only screen and (max-width: 1080px) {
-          grid-template-columns: repeat(2, minmax(250px, 1fr));
-        }
+              @media only screen and (max-width: 480px) {
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+              }
 
-        @media only screen and (max-width: 768px) {
-          grid-template-columns: repeat(2, minmax(200px, 1fr));
-        }
-
-        @media only screen and (max-width: 480px) {
-          grid-template-columns: repeat(1, minmax(200px, 1fr));
-        }
-
-        .db-grid-item {
-          background-color: #0C0B0B;
-          padding: 20px;
-          width: 100%;
-
-          .top-wrap {
-            position: relative;
-            width: 100%;
-            height: 190px;
-            overflow: hidden;
-            margin-bottom: 20px;
-
-            .blog-img {
-              position: relative;
-              z-index: 1;
-              display: block;
-              object-fit: cover;
-              object-position: center;
-              width: 100%;
-              height: 100%;
-            }
-
-            .blog-tag-list {
-              position: absolute;
-              bottom: 0;
-              left: 0;
-              display: flex;
-              justify-content: flex-start;
-              align-items: stretch;
-              gap: 8px;
-
-              .blog-tag-item {
+              .article-title {
                 color: $white-color;
                 font-family: $primary-font-family;
-                font-size: 13px;
+                font-size: 56px;
+                font-style: normal;
+                font-weight: 700;
+                text-transform: uppercase;
+                line-height: 1.15em;
+                letter-spacing: -2.24px;
+
+                @media only screen and (max-width: 768px) {
+                  font-size: 40px;
+                }
+              }
+
+              .article-date-published {
+                color: $black-color;
+                font-family: $primary-font-family;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                text-transform: uppercase;
+                line-height: 1.15em;
+                white-space: nowrap;
+                display: block;
+                background-color: #A09FA3;
+                padding: 0.7em 1.4em;
+
+                @media only screen and (max-width: 768px) {
+                  font-size: 20px;
+                }
+
+                @media only screen and (max-width: 480px) {
+                  font-size: 16px;
+                }
+              }
+            }
+
+            &:nth-of-type(2) {
+              justify-content: flex-start;
+              align-items: center;
+              gap: 30px;
+              min-height: 40px;
+              margin-bottom: 27px;
+
+              @media only screen and (max-width: 768px) {
+                flex-wrap: wrap;
+              }
+
+              .article-tag-list {
+                display: flex;
+                justify-content: flex-start;
+                align-items: stretch;
+                gap: 9px;
+
+                .article-tag-item {
+                  color: $white-color;
+                  font-family: $secondary-font-family;
+                  font-size: 14px;
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 1.75em;
+                  letter-spacing: 0.14px;
+                  white-space: nowrap;
+                  display: block;
+                  width: max-content;
+                  background-color: #23202D;
+                  padding: 8px 15px;
+                }
+              }
+
+              .article-date-published {
+                color: #838383;
+                font-family: $secondary-font-family;
+                font-size: 14px;
                 font-style: normal;
                 font-weight: 400;
-                text-align: center;
-                line-height: 1em;
-                display: block;
-                background-color: #0C0B0B;
-                padding: 8px 10px;
+                line-height: 1.25em;
+                letter-spacing: 0.14px;
+                white-space: nowrap;
+              }
+
+              .article-author {
+                color: #838383;
+                font-family: $secondary-font-family;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 1.25em;
+                letter-spacing: 0.14px;
+                white-space: nowrap;
+
+                span {
+                  color: $white-color;
+                  margin-left: 4px;
+                }
               }
             }
           }
 
-          .bot-wrap {
-            .blog-title {
+          .article-description {
+            * {
               color: $white-color;
-              font-family: $primary-font-family;
-              font-size: 20px;
-              font-style: normal;
-              font-weight: 700;
-              line-height: 1.5em;
-              display: block;
-              margin-bottom: 8px;
-
-              &:hover {
-                color: $secondary-color;
-              }
-            }
-
-            .db-inner-row {
-              justify-content: flex-start;
-              align-items: center;
-              gap: 8px;
-              margin-bottom: 8px;
-
-              .blog-author {
-                color: $white-color;
-                font-family: $primary-font-family;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: 1.25em;
-              }
-
-              .svg-icon-dash-line {
-                display: block;
-                max-width: 27px;
-                min-width: 27px;
-              }
-
-              .blog-date-post {
-                color: $white-color;
-                font-family: $primary-font-family;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: 1.25em;
-              }
-            }
-
-            .blog-description {
-              color: $white-color;
-              font-family: $tertiary-font-family;
-              font-size: 15px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 1.5em;
-              margin-bottom: 20px;
-            }
-
-            .db-btn--read-more {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              max-width: 170px;
-              min-width: 170px;
-              width: 100%;
-              padding: 12px 16px;
-              border: 1px solid $secondary-color;
-              border-radius: 50px;
-
-              .label {
-                color: $secondary-color;
-                font-family: $tertiary-font-family;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 700;
-                text-align: center;
-                line-height: 1.25em;
-                transition:
-                  color $hover-transition-duration ease-in-out 0ms;
-              }
-
-              &:hover {
-                background-color: $secondary-color;
-
-                .label {
-                  color: $white-color;
-                }
-              }
             }
           }
         }
